modules/gdscript/tests/scripts/analyzer/errors/lambda_cyclic_ref_param.gd
var f = func (_a = x): return 0
var x = f

func test():
	pass
